Fixed spacing and made navbar sticky-top

--- a/style.css
+++ b/style.css
@@ -43,6 +43,7 @@ p {
 .navigation-links {
   display: flex;
   margin-top: 40px;
+  margin-bottom: 30px;
   justify-content: center;
 }
 
@@ -121,5 +122,8 @@ p {
     display: block;
     text-align: center;
     margin: 0 20px;
+  }
+  .navigation-links {
+    margin-bottom: 30px;
   }
 }
